2005-07-21  Sushma Rai  <rsushma@novell.com>

	* gui/widgets/e-addressbook-view.[ch] (eab_view_delete_selection):
	Prompt for confirmation only while deleting the contact, and not for
	cut operation.
	(delete)(eab_view_cut): Using the flag to inidicate delete/cut.

	* addressbook/gui/component/addressbook-view.c (delete_contact_cb):
	Similar. Fixes #311090

2005-07-19  Arunprakash <arunp@novell.com>

	* gui/widgets/eab-gui-util.c: Added two new entries in array 
	status_to_string for two left out values of EBookStatus. Fixes #310343.
	(eab_error_dialog): Marked status_str for translation.

2005-07-15  Sushma Rai  <rsushma@novell.com>

	* gui/component/addressbook-migrate.c (migrate_contacts): unref query.
	(migrate_contact_lists_for_local_folders): Similar.
	(migrate_company_phone_for_local_folders): Similar. 

	* util/eab-book-util.c: using e_book_query_unref instead of 
	g_object_unref.

2005-07-13  Sushma Rai  <rsushma@novell.com>

	* addressbook/importers/evolution-vcard-importer.c (vcard_supported):
	Return false in the source URI does not start with "file://".

	* addressbook/importers/evolution-ldif-importer.c 
	(ldif_import_contacts): Using the proper file pointer.
	(ldif_supported): Return false in the source URI does not start with 
	"file://".
	(ldif_import_done): Close the file opened.
	(ldif_import): Opening the proper file.

2005-07-09  Veerapuram Varadhan <vvaradhan@novell.com>
	
	* gui/component/addressbook-component.c: (impl_createControls):
	* gui/component/addressbook-view.[c,h]: (addressbook_view_edit_contact):
	(impl_handleURI): Handle contacts:// uris.
	
2005-07-08  Sushma Rai  <rsushma@novell.com>

	* gui/widgets/eab-gui-util.c (eab_load_error_dialog): Including the
	file path in the error string. Fixes #309624

2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>

	* gui/component/addressbook-component.c: (ensure_sources):
	* gui/component/addressbook-migrate.c: (create_groups):
	Enable autocompletion on personal addressbook when creating it